{
  "version": 4,
  "terraform_version": "1.13.0",
  "serial": 231,
  "lineage": "fd976750-ab92-b422-ce02-251a1211db29",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:717694551492:route-table/rtb-0db2cdb22e4bb46bb",
            "default_route_table_id": "rtb-0db2cdb22e4bb46bb",
            "id": "rtb-0db2cdb22e4bb46bb",
            "owner_id": "717694551492",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0b68815c2ef4707eb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-only-famous-bunny"
            },
            "tags_all": {
              "Name": "private-only-famous-bunny"
            },
            "timeouts": null,
            "vpc_id": "vpc-0287668c12a6f0b5f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "random_pet.pavan_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a223c40a8b3fdf08",
            "arn": "arn:aws:ec2:us-east-2:717694551492:elastic-ip/eipalloc-0a223c40a8b3fdf08",
            "association_id": "eipassoc-02fc66f1a0cd553cf",
            "domain": "vpc",
            "id": "eipalloc-0a223c40a8b3fdf08",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0978930abafc5bbbd",
            "private_dns": "ip-172-16-3-224.us-east-2.compute.internal",
            "private_ip": "172.16.3.224",
            "public_dns": "ec2-3-148-91-137.us-east-2.compute.amazonaws.com",
            "public_ip": "3.148.91.137",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2",
            "tags": {
              "Name": "only-famous-bunny-NAT"
            },
            "tags_all": {
              "Name": "only-famous-bunny-NAT"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "random_pet.pavan_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "windows-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06ca8c68b88521a37",
            "arn": "arn:aws:ec2:us-east-2:717694551492:elastic-ip/eipalloc-06ca8c68b88521a37",
            "association_id": "eipassoc-04e3db41a8709581e",
            "domain": "vpc",
            "id": "eipalloc-06ca8c68b88521a37",
            "instance": "i-0a0cf195ffb8f58ca",
            "network_border_group": "us-east-2",
            "network_interface": "eni-06ae46aae3fc306e8",
            "private_dns": "ip-172-16-7-47.us-east-2.compute.internal",
            "private_ip": "172.16.7.47",
            "public_dns": "ec2-3-150-29-49.us-east-2.compute.amazonaws.com",
            "public_ip": "3.150.29.49",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2",
            "tags": {
              "Name": "only-famous-bunny-Windows-EIP"
            },
            "tags_all": {
              "Name": "only-famous-bunny-Windows-EIP"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "random_pet.pavan_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05b00365623a86bd3",
            "arn": "arn:aws:ec2:us-east-2:717694551492:instance/i-0a0cf195ffb8f58ca",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-039dc46505ddd2e25",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": true,
            "hibernation": false,
            "id": "i-0a0cf195ffb8f58ca",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "windows-only-famous-bunny_windows",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "password_data": "DqfOiwZxGzsD4PoJkHkDqov0KoQfQyfc3rfe6zP6V3DE9XTaWftfscv8jnNiSB7wN7nzO+1e07k54jHUvba/i/HkNxqG3ZQ59DBMZ0o+aChPl+h4rTcTQX+ypjd+nwkC5ddLLMbTQaQoIy2vMzufzfHIVatZ2kzxNOWxc1Qb0gmoRLNQ3nqbVE+eYGhtLvFCRCfRIcHsEnsMHlGRFJR95oQRkYrfvob2/UKRnoxgXLaflwz9PIYxbe8yh3b/oXUZQocDpNC6szxHsywQhXk/3FTbZpeVhEH5Qp+bPPUpeYSQq/3jI7TaWTYb36KnuZiFCjwnGv48NLJApl71HgQfWg==",
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06ae46aae3fc306e8"
              }
            ],
            "primary_network_interface_id": "eni-06ae46aae3fc306e8",
            "private_dns": "ip-172-16-7-47.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.7.47",
            "public_dns": "ec2-3-150-29-49.us-east-2.compute.amazonaws.com",
            "public_ip": "3.150.29.49",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-039dc46505ddd2e25",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0af4879926202c2ce",
            "tags": {
              "Name": "only-famous-bunny"
            },
            "tags_all": {
              "Name": "only-famous-bunny"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0010115878848f112"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.pavan_key",
            "aws_security_group.windows_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "data.http.my_ip",
            "random_pet.pavan_pet",
            "tls_private_key.pavan_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0bb7d855677353076",
            "arn": "arn:aws:ec2:us-east-2:717694551492:instance/i-0b6cfcc426fada59b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08eee189c7c44ad3e",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b6cfcc426fada59b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "windows-only-famous-bunny_windows",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0cca319ebeb2664a7"
              }
            ],
            "primary_network_interface_id": "eni-0cca319ebeb2664a7",
            "private_dns": "ip-172-16-8-88.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.8.88",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08eee189c7c44ad3e",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-081c0533e37353cb4",
            "tags": {
              "Name": "only-famous-bunny-linux"
            },
            "tags_all": {
              "Name": "only-famous-bunny-linux"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09039881f7f75b31b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.Windows",
            "aws_key_pair.pavan_key",
            "aws_security_group.Linux_SG",
            "aws_security_group.windows_sg",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "data.http.my_ip",
            "random_pet.pavan_pet",
            "tls_private_key.pavan_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:717694551492:internet-gateway/igw-01305ac294735ddc1",
            "id": "igw-01305ac294735ddc1",
            "owner_id": "717694551492",
            "region": "us-east-2",
            "tags": {
              "Name": "IGW-only-famous-bunny"
            },
            "tags_all": {
              "Name": "IGW-only-famous-bunny"
            },
            "vpc_id": "vpc-0287668c12a6f0b5f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-01",
            "random_pet.pavan_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a223c40a8b3fdf08",
            "association_id": "eipassoc-02fc66f1a0cd553cf",
            "connectivity_type": "public",
            "id": "nat-0b68815c2ef4707eb",
            "network_interface_id": "eni-0978930abafc5bbbd",
            "private_ip": "172.16.3.224",
            "public_ip": "3.148.91.137",
            "region": "us-east-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0af4879926202c2ce",
            "tags": {
              "Name": "NAT-only-famous-bunny"
            },
            "tags_all": {
              "Name": "NAT-only-famous-bunny"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "random_pet.pavan_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "nacl_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:717694551492:network-acl/acl-0339f3204c0f60ff1",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 500,
                "to_port": 0
              }
            ],
            "id": "acl-0339f3204c0f60ff1",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "172.16.7.47/32",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "172.16.7.47/32",
                "from_port": 3306,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 3306
              }
            ],
            "owner_id": "717694551492",
            "region": "us-east-2",
            "subnet_ids": [
              "subnet-081c0533e37353cb4"
            ],
            "tags": {
              "Name": "NACL-Private-only-famous-bunny"
            },
            "tags_all": {
              "Name": "NACL-Private-only-famous-bunny"
            },
            "vpc_id": "vpc-0287668c12a6f0b5f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.private_subnet",
            "aws_vpc.vpc-01",
            "random_pet.pavan_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "nacl_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:717694551492:network-acl/acl-06a3616275866373e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 500,
                "to_port": 0
              }
            ],
            "id": "acl-06a3616275866373e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 140,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "107.115.163.86/32",
                "from_port": 3389,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 3389
              }
            ],
            "owner_id": "717694551492",
            "region": "us-east-2",
            "subnet_ids": [
              "subnet-0af4879926202c2ce"
            ],
            "tags": {
              "Name": "NACL-only-famous-bunny"
            },
            "tags_all": {
              "Name": "NACL-only-famous-bunny"
            },
            "vpc_id": "vpc-0287668c12a6f0b5f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "random_pet.pavan_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nacl_private_inbound_dynamic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-787246427",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0339f3204c0f60ff1",
            "protocol": "6",
            "region": "us-east-2",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.nacl_private",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc-01",
            "random_pet.pavan_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nacl_private_inbound_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "172.16.7.47/32",
            "egress": false,
            "from_port": 3306,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1320212496",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0339f3204c0f60ff1",
            "protocol": "6",
            "region": "us-east-2",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.Windows",
            "aws_key_pair.pavan_key",
            "aws_network_acl.nacl_private",
            "aws_security_group.windows_sg",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "data.http.my_ip",
            "random_pet.pavan_pet",
            "tls_private_key.pavan_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nacl_private_inbound_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "172.16.7.47/32",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2468741525",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0339f3204c0f60ff1",
            "protocol": "6",
            "region": "us-east-2",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.Windows",
            "aws_key_pair.pavan_key",
            "aws_network_acl.nacl_private",
            "aws_security_group.windows_sg",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "data.http.my_ip",
            "random_pet.pavan_pet",
            "tls_private_key.pavan_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nacl_private_outbound_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3607398381",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0339f3204c0f60ff1",
            "protocol": "-1",
            "region": "us-east-2",
            "rule_action": "allow",
            "rule_number": 500,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.nacl_private",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc-01",
            "random_pet.pavan_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nacl_public_inbound_dynamic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-525674454",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-06a3616275866373e",
            "protocol": "6",
            "region": "us-east-2",
            "rule_action": "allow",
            "rule_number": 140,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.nacl_public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "random_pet.pavan_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nacl_public_inbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3756805440",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-06a3616275866373e",
            "protocol": "6",
            "region": "us-east-2",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.nacl_public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "random_pet.pavan_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nacl_public_inbound_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-41587909",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-06a3616275866373e",
            "protocol": "6",
            "region": "us-east-2",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.nacl_public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "random_pet.pavan_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nacl_public_inbound_rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "24.155.64.208/32",
            "egress": false,
            "from_port": 3389,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3216046091",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-06a3616275866373e",
            "protocol": "6",
            "region": "us-east-2",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 3389
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.nacl_public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "data.http.my_ip",
            "random_pet.pavan_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nacl_public_outbound_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4127264079",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-06a3616275866373e",
            "protocol": "-1",
            "region": "us-east-2",
            "rule_action": "allow",
            "rule_number": 500,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.nacl_public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "random_pet.pavan_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:717694551492:route-table/rtb-002fa6ba67fab1360",
            "id": "rtb-002fa6ba67fab1360",
            "owner_id": "717694551492",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01305ac294735ddc1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-only-famous-bunny"
            },
            "tags_all": {
              "Name": "public-only-famous-bunny"
            },
            "timeouts": null,
            "vpc_id": "vpc-0287668c12a6f0b5f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc-01",
            "random_pet.pavan_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b46cd438c798af75",
            "region": "us-east-2",
            "route_table_id": "rtb-002fa6ba67fab1360",
            "subnet_id": "subnet-0af4879926202c2ce"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "random_pet.pavan_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Linux_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:717694551492:security-group/sg-09039881f7f75b31b",
            "description": "Allows SSH and MySQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09039881f7f75b31b",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.7.47/32"
                ],
                "description": "Allows inbound MySQL 3306",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "172.16.7.47/32"
                ],
                "description": "Allows inbound SSH 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "only-famous-bunny-Linux_SG",
            "name_prefix": "",
            "owner_id": "717694551492",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0287668c12a6f0b5f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "717694551492",
            "id": "sg-09039881f7f75b31b",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_instance.Windows",
            "aws_key_pair.pavan_key",
            "aws_security_group.windows_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "data.http.my_ip",
            "random_pet.pavan_pet",
            "tls_private_key.pavan_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "windows_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:717694551492:security-group/sg-0010115878848f112",
            "description": "Allows RDP,HTTP and HTTPS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0010115878848f112",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows inbound HTTP 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows inbound HTTPS 80",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "24.155.64.208/32"
                ],
                "description": "Allows inbound RDP 3389",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "windows-only-famous-bunny-sg",
            "name_prefix": "",
            "owner_id": "717694551492",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "windows-only-famous-bunny-sg"
            },
            "tags_all": {
              "Name": "windows-only-famous-bunny-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0287668c12a6f0b5f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "717694551492",
            "id": "sg-0010115878848f112",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.vpc-01",
            "data.http.my_ip",
            "random_pet.pavan_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:717694551492:subnet/subnet-081c0533e37353cb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.16.8.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081c0533e37353cb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "717694551492",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "private-only-famous-bunny"
            },
            "tags_all": {
              "Name": "private-only-famous-bunny"
            },
            "vpc_id": "vpc-0287668c12a6f0b5f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "717694551492",
            "id": "subnet-081c0533e37353cb4",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.vpc-01",
            "random_pet.pavan_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:717694551492:subnet/subnet-0af4879926202c2ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.16.0.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af4879926202c2ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "717694551492",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "public-only-famous-bunny"
            },
            "tags_all": {
              "Name": "public-only-famous-bunny"
            },
            "vpc_id": "vpc-0287668c12a6f0b5f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "717694551492",
            "id": "subnet-0af4879926202c2ce",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.vpc-01",
            "random_pet.pavan_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:717694551492:vpc/vpc-0287668c12a6f0b5f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/20",
            "default_network_acl_id": "acl-0128344d4e3978139",
            "default_route_table_id": "rtb-0db2cdb22e4bb46bb",
            "default_security_group_id": "sg-0e4b9f549c87efd71",
            "dhcp_options_id": "dopt-040f81f8d1709d42f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0287668c12a6f0b5f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0db2cdb22e4bb46bb",
            "owner_id": "717694551492",
            "region": "us-east-2",
            "tags": {
              "Name": "only-famous-bunny"
            },
            "tags_all": {
              "Name": "only-famous-bunny"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "random_pet.pavan_pet"
          ]
        }
      ]
    }
  ]
}